feat: edit comment on index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="components/js/script.js"></script>
 </head>
 <body>
+     <!-- header design -->
     <header>
         WELCOME TO <span class="header">KATIK</span> 
         <span class="sub-header">(Kalkulator Matematik)</span>
